# auto-gitmoji

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  deny.toml  taplo.toml
.cursor/rules/: cleancode.mdc
fixtures/: gitmojis.json  keyword_map.json
memory_bank/: activeContext.md  build-completion.md  build-documentation.md  progress.md  projectbrief.md  tasks.md
specs/: 000-init-spec.md  001-start-up.md  002-llm-matcher.md
src/: commit.rs  emoji.rs  lib.rs  main.rs
src/matcher/: llm.rs  mod.rs  simple.rs
tests/: integration_tests.rs
