[package]
name = "auto-gitmoji"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "amoji"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

[features]
default = []
# llm = ["reqwest", "tokio"]
