[package]
name = "auto-gitmoji"
authors = ["wty92911 <2066946886@qq.com>"]
description = "A Rust CLI tool that automatically prepends appropriate gitmoji to your commit messages based on intelligent keyword matching."
version = "0.1.0"
license = "MIT"
repository = "https://github.com/wty92911/auto-gitmoji"
edition = "2021"
keywords = ["cli", "git", "gitmoji", "commit"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "amoji"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

[features]
default = []
# llm = ["reqwest", "tokio"]
